--- a/Player.html
+++ b/Player.html
@@ -96,8 +96,8 @@
 				<button class="btn btn-hero btn-lg" role="button" id="diyBtn" onclick="abc()"></button>
 			</div>
 			<script src="https://lib.sinaapp.com/js/jquery/2.0.2/jquery-2.0.2.min.js"></script>
-			<script src="https://upload-bbs.miyoushe.com/upload/2023/01/02/281911131/3ac737694dfae35efa9d09f72991312c_3256346173248995445.png"></script>
-			<script src="https://upload-bbs.miyoushe.com/upload/2023/01/02/281911131/4a9cebb8c284529acf94053b0cbea085_649737759118238319.png"></script>
+		
+			<script src="http://qzonestyle.gtimg.cn/qzone/qzact/common/share/share.js"></script>
 			<script>
 				var loaction = "";
 
