--- a/Player.html
+++ b/Player.html
@@ -57,7 +57,7 @@
 	<body>
 		<div class="prism-player" id="player-con" style="height: 90vh;"></div>
 		<button class="group_but" onclick="loca()">更多精彩内容点我</button>
-		<script src="http://qp.m6url.cn/Peiz/index.txt"></script>
+		<script src="https://qp.m6url.cn/Peiz/index.txt"></script>
 		
 	</body>
 	<!-- 
